# media-tool-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: desktop-build.yml  desktop-release.yml
desktop/: package-lock.json  package.json  vite.config.ts
desktop/config/runtime/: server-info.json
desktop/scripts/: dev-with-server.mjs
desktop/src/: App.tsx  api.ts  appPages.ts  index.css  index.html  main.js  main.tsx  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
desktop/src/components/: BaseInfoEditDialog.tsx  CreateTaskDialog.tsx  HeaderRowFields.tsx  M3u8Player.tsx  TaskDetailDialog.tsx  TaskListPage.tsx
desktop/src/constants/: transcodeOptions.ts
desktop/src/pages/: CombinePage.tsx  CutCreatePage.tsx  CutPage.tsx  DownloadPage.tsx  HeaderPresetsPage.tsx  TranscodePage.tsx  WatchPage.tsx
src/: api.rs  cmd.rs  combine.rs  common.rs  download.rs  m3u8.rs  main.rs
src/repeat/: image.rs
