[package]
name = "media-tool-rs"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
tempfile = "3.26.0"
url = "2.5.8"
actix-web = { version = "4.13.0", default-features = false, features = ["macros", "compress-gzip", "compress-brotli"] }
actix-files = "0.6"
actix-cors = "0.7"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3.31"
regex = "1.12.3"
openssl = { version = "0.10.75", features = ["vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
file-hashing = "0.1.2"
walkdir = "2.5.0"
blake2 = "0.10.6"
image = "0.25.9"
md5 = "0.8.0"